// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`addRealtimeToGraphqlHandler > matches snapshot for fixture "aliased-import" 1`] = `
"import scuid from 'scuid'

import { createGraphQLHandler as someOtherFunctionName } from '@cedarjs/graphql-server'

import directives from 'src/directives/**/*.{js,ts}'
import sdls from 'src/graphql/**/*.sdl.{js,ts}'
import services from 'src/services/**/*.{js,ts}'

import { db } from 'src/lib/db'
import { executionContext } from 'src/lib/executionContext'
import { logger } from 'src/lib/logger'
import { realtime } from "src/lib/realtime";

const graphQLHandler = someOtherFunctionName({
  loggerConfig: { logger, options: {} },
  directives,
  sdls,
  services,
  realtime,
  onException: () => {
    // Disconnect from your database with an unhandled exception.
    db.$disconnect()
  }
})

export const handler = async (event, context) => {
  const requestIdHeader = 'x-request-id'
  const requestId = event.headers[requestIdHeader] ?? scuid()
  const store = new Map([['requestId', requestId]])

  const response = await executionContext.run(store, () =>
    graphQLHandler(event, context),
  )
  return {
    ...response,
    headers: { ...(response.headers ?? {}), [requestIdHeader]: requestId },
  }
}
"
`;

exports[`addRealtimeToGraphqlHandler > matches snapshot for fixture "default-graphql-function" 1`] = `
"import { createGraphQLHandler } from '@cedarjs/graphql-server'

import directives from 'src/directives/**/*.{js,ts}'
import sdls from 'src/graphql/**/*.sdl.{js,ts}'
import services from 'src/services/**/*.{js,ts}'

import { db } from 'src/lib/db'
import { logger } from 'src/lib/logger'
import { realtime } from "src/lib/realtime";

export const handler = createGraphQLHandler({
  loggerConfig: { logger, options: {} },
  directives,
  sdls,
  services,
  realtime,
  onException: () => {
    // Disconnect from your database with an unhandled exception.
    db.$disconnect()
  }
})
"
`;

exports[`addRealtimeToGraphqlHandler > matches snapshot for fixture "evil-graphql-function" 1`] = `
"import { createGraphQLHandler } from '@cedarjs/graphql-server'

import directives from 'src/directives/**/*.{js,ts}'
import sdls from 'src/graphql/**/*.sdl.{js,ts}'
import services from 'src/services/**/*.{js,ts}'

import { db } from 'src/lib/db'
import { logger } from 'src/lib/logger'
import { realtime } from "src/lib/realtime";

export const handling = () => {
  console.log('handling')
}

const config = {
  loggerConfig: { logger, options: {} },
  directives,
  sdls,
  services,
  realtime,
  onException() {
    // Disconnect from your database with an unhandled exception.
    db.$disconnect()
  },

  extraPlugins: [
    {
      name: 'test',
      function: () => {
        console.log('test')
      },
    },
  ],

  graphiQLEndpoint: 'coolness',
  allowGraphiQL: false
}

/**
 * Comments...
 */
export const handler = createGraphQLHandler(
  process.env.EVIL ? config : {
    sadness: true,
    realtime
  },
)
"
`;

exports[`addRealtimeToGraphqlHandler > matches snapshot for fixture "function-graphql-function" 1`] = `
"import { createGraphQLHandler } from '@cedarjs/graphql-server'

import directives from 'src/directives/**/*.{js,ts}'
import sdls from 'src/graphql/**/*.sdl.{js,ts}'
import services from 'src/services/**/*.{js,ts}'

import { db } from 'src/lib/db'
import { logger } from 'src/lib/logger'
import { realtime } from "src/lib/realtime";

const config = () => ({
  loggerConfig: { logger, options: {} },
  directives,
  sdls,
  services,
  realtime,
  onException: () => {
    // Disconnect from your database with an unhandled exception.
    db.$disconnect()
  }
})

export const handler = createGraphQLHandler(config())
"
`;

exports[`addRealtimeToGraphqlHandler > matches snapshot for fixture "modified-graphql-function" 1`] = `
"import { createGraphQLHandler } from '@cedarjs/graphql-server'

import directives from 'src/directives/**/*.{js,ts}'
import sdls from 'src/graphql/**/*.sdl.{js,ts}'
import services from 'src/services/**/*.{js,ts}'

import { db } from 'src/lib/db'
import { logger } from 'src/lib/logger'
import { realtime } from "src/lib/realtime";

export const handling = () => {
  console.log('handling')
}

const config = {
  loggerConfig: { logger, options: {} },
  directives,
  sdls,
  services,
  realtime,
  onException() {
    // Disconnect from your database with an unhandled exception.
    db.$disconnect()
  },

  extraPlugins: [
    {
      name: 'test',
      function: () => {
        console.log('test')
      },
    },
  ],

  graphiQLEndpoint: 'coolness',
  allowGraphiQL: false
}

/**
 * Comments...
 */
export const handler = createGraphQLHandler(config)
"
`;

exports[`addRealtimeToGraphqlHandler > matches snapshot for fixture "wrapper-function" 1`] = `
"import scuid from 'scuid'

import { createGraphQLHandler } from '@cedarjs/graphql-server'

import directives from 'src/directives/**/*.{js,ts}'
import sdls from 'src/graphql/**/*.sdl.{js,ts}'
import services from 'src/services/**/*.{js,ts}'

import { db } from 'src/lib/db'
import { executionContext } from 'src/lib/executionContext'
import { logger } from 'src/lib/logger'
import { realtime } from "src/lib/realtime";

const graphQLHandler = createGraphQLHandler({
  loggerConfig: { logger, options: {} },
  directives,
  sdls,
  services,
  realtime,
  onException: () => {
    // Disconnect from your database with an unhandled exception.
    db.$disconnect()
  }
})

export const handler = async (event, context) => {
  const requestIdHeader = 'x-request-id'
  const requestId = event.headers[requestIdHeader] ?? scuid()
  const store = new Map([['requestId', requestId]])

  const response = await executionContext.run(store, () =>
    graphQLHandler(event, context),
  )
  return {
    ...response,
    headers: { ...(response.headers ?? {}), [requestIdHeader]: requestId },
  }
}
"
`;

exports[`addRealtimeToGraphqlHandler > matches snapshot for fixture "wrapper-function-commented" 1`] = `
"import scuid from 'scuid'

import { createGraphQLHandler } from '@cedarjs/graphql-server'

import directives from 'src/directives/**/*.{js,ts}'
import sdls from 'src/graphql/**/*.sdl.{js,ts}'
import services from 'src/services/**/*.{js,ts}'

import { db } from 'src/lib/db'
import { executionContext } from 'src/lib/executionContext'
import { logger } from 'src/lib/logger'
import { realtime } from "src/lib/realtime";

/*
const graphQLHandler = createGraphQLHandler({
  loggerConfig: { logger, options: {} },
  directives,

  // Shouldn't touch this comment

  sdls,
  services,
  realtime,
  onException: () => {
    // Disconnect from your database with an unhandled exception.
    db.$disconnect()
  },
})
*/

const graphQLHandler = createGraphQLHandler({
  loggerConfig: { logger, options: {} },
  directives,
  sdls,
  services,
  realtime,
  onException: () => {
    // Disconnect from your database with an unhandled exception.
    db.$disconnect()
  }
})

export const handler = async (event, context) => {
  const requestIdHeader = 'x-request-id'
  const requestId = event.headers[requestIdHeader] ?? scuid()
  const store = new Map([['requestId', requestId]])

  const response = await executionContext.run(store, () =>
    graphQLHandler(event, context),
  )
  return {
    ...response,
    headers: { ...(response.headers ?? {}), [requestIdHeader]: requestId },
  }
}
"
`;

exports[`addRealtimeToGraphqlHandler > skips when createGraphQLHandler import is missing 1`] = `
{
  "code": "export const handler = () => ({})",
  "modified": false,
  "reason": "no-createGraphQLHandler-import",
  "skipped": true,
}
`;
